# test_task_insiders

./: .env_example  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/locations/: models.py  serializers.py  urls.py  views.py
apps/locations/migrations/: 0001_initial.py  0002_alter_review_unique_together.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
core/: settings.py  urls.py
